--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        h1 { color: blue; }
+    </style>
 </head>
 <body>
     <h1>This is my Portfolio</h1>
     <p>Welcome to my portfolio website!</p>
+    <img src="path_to_your_image.jpg" alt="My Image">
+    <!-- Add more sections as needed -->
 </body>
 </html>
